# ephemera

./: .env  .gitignore  Cargo.toml  READMD.md  build.rs  config.toml  debug.txt  debug2.txt  demonstrate_tests.sh  note.md  run_tests.sh  rustc-ice-2025-11-22T01_24_55-4400.txt  rustc-ice-2025-11-22T01_24_55-4402.txt  rustc-ice-2025-11-22T05_53_36-20292.txt  rustc-ice-2025-11-22T05_53_36-20301.txt  rustc-ice-2025-11-22T05_54_54-21558.txt  rustc-ice-2025-11-22T05_54_54-21560.txt  rustc-ice-2025-11-22T06_06_07-21966.txt  rustc-ice-2025-11-22T06_06_07-21974.txt  rustc-ice-2025-11-22T06_06_40-22232.txt  rustc-ice-2025-11-22T06_06_40-22237.txt  setup_net.nu  setup_net2.nu  setup_network.nu  setup_network.sh  strategy.toml  todo.md
bpf/: Makefile  xdp_fwd.c
data/: binance_btc-usdt_1m.csv
ephemera-data/: Cargo.toml  note.md
ephemera-data/src/: data.rs  error.rs  lib.rs
ephemera-execution/: Cargo.toml  note.md
ephemera-indicator/: Cargo.toml
ephemera-indicator/src/: lib.rs
ephemera-shared/: Cargo.toml
ephemera-shared/src/: data.rs  execution.rs  id_registry.rs  lib.rs  signal.rs  stream.rs
ephemera-source/: Cargo.toml  note.md
ephemera-source/src/: csv.rs  lib.rs  router.rs  utils.rs
ephemera-source/src/binance/: mod.rs  model.rs
ephemera-source/src/okx/: auth.rs  execution.rs  fetch.rs  mod.rs  model.rs  xdp.rs
ephemera-strategy/: Cargo.toml  note.md
ephemera-strategy/src/: context.rs  lib.rs  risk.rs  signal.rs  traits.rs
ephemera-strategy/src/indicators/: ahr.rs  bollinger.rs  ema.rs  iter.rs  ma.rs  macd.rs  mod.rs  mvrv.rs  pi_cycle.rs  rsi.rs  sar.rs  stream.rs
ephemera-strategy/src/strategies/: harvest.rs  ma.rs  macd.rs  mod.rs  rsi.rs  sar_trend.rs  smart_dca.rs
ephemera-tui/: Cargo.toml  note.md
ephemera-tui/src/: app.rs  events.rs  main.rs
ephemera-tui/src/ui/: candles.rs  dashboard.rs  help.rs  layout.rs  logs.rs  mod.rs  orderbook.rs  performance.rs  trades.rs
ephemera-xdp/: Cargo.toml  build.rs  build_info.txt  config.toml  note.md  setup_net.nu  todo.md
ephemera-xdp/src/: async_listener.rs  async_stream.rs  device.rs  lib.rs  reactor.rs  test_utils.rs  utils.rs
ephemera-xdp/src/bpf/: mod.rs  xdp_filter.bpf.c
scripts/: fetch_data.py  pyproject.toml
src/: backtest.rs  config.rs  data.rs  lib.rs  main.rs  test_utils.rs
src/af_xdp/: async_listener.rs  async_stream.rs  device.rs  listener.rs  mod.rs  reactor.rs  runtime.rs  stream.rs
src/bpf/: mod.rs  xdp_ip_filter.bpf.c
src/client/: mod.rs
src/client/okx/: mod.rs  model.rs
src/client/okx_xdp/: model.rs
src/config/: strategy.rs
src/source/: mod.rs  utils.rs
src/source/binance/: mod.rs  model.rs
src/source/okx/: mod.rs  model.rs  xdp.rs
src/source/okx_xdp/: model.rs
src/stream/: http.rs  mod.rs
src/xdp/: async_listener.rs  async_stream.rs  device.rs  mod.rs  reactor.rs  test_utils.rs
src/xdp/bpf/: mod.rs  xdp_ip_filter.bpf.c
tests/: README.md  cleanup_net.nu  device_advanced_tests.rs  device_integration_tests.rs  run_test.nu  setup_net.nu  xdp_device_test.rs  xdp_listener_test.rs
tests/client/: mod.rs  okx.rs
