[package]
name = "ephemera"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["ephemera-indicator", "ephemera-shared", "ephemera-source", "ephemera-strategy", "ephemera-tui","ephemera-xdp"]

[dependencies]
ephemera-strategy = { path = "./ephemera-strategy" }
eyre = "0.6.12"
ndarray = {version = "0.16", features = ["serde", "rayon"]}
ndarray-stats = "0.6.0"
rust_decimal = "1.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
