[package]
name = "ephemera"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["ephemera-execution",
  "ephemera-shared",
  "ephemera-source",
  "ephemera-strategy",
  "ephemera-xdp",
]

[dependencies]
ephemera-shared = { workspace = true }
ephemera-source = { workspace = true }
ephemera-strategy = { workspace = true }

tokio = { workspace = true }
itertools = { workspace = true }
futures = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = "0.4.42"

[workspace.dependencies]
ephemera-shared = { path = "./ephemera-shared" }
ephemera-source = { path = "./ephemera-source" }
ephemera-strategy = { path = "./ephemera-strategy" }
ephemera-xdp = { path = "./ephemera-xdp" }

tokio = { version = "1.48", features = ["full"] }
itertools = "0.14.0"
futures = "0.3.31"
rand = "0.9"
eyre = "0.6.12"
tracing = "0.1"
tracing-subscriber = "0.3.19"
bytestring = { version = "1.5.0", features = ["serde"] }
