[package]
name = "ephemera-data"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
bytestring = "1.4.0"
futures = "0.3.31"
itertools = "0.14.0"
rust_decimal = { version = "1.37.2", features = ["macros"] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.16"

[dev-dependencies]
tokio = { version = "1.47", features = ["rt", "macros"] }
