[package]
name = "ephemera-source"
version = "0.1.0"
edition = "2024"

[dependencies]
ephemera-data = {path = "../ephemera-data"}
ephemera-xdp = {path = "../ephemera-xdp"}
async-stream = "0.3.6"
bytestring ={version = "1.4.0", features = ["serde"]} 
eyre = "0.6.12"
futures = "0.3.31"
http = "1.3.1"
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio ={version = "1.47.1"} 
tokio-websockets = { version = "0.12", features = ["client", "native-tls", "rand", "openssl"] }
rust_decimal = { version = "1.37.2", features = ["macros", "serde-with-str"] }
strum = {version = "0.27", features = ["derive"]}
# reqwest = { version = "0.12.22", features = ["json"] }
rand=  "0.9"
serde_with = "3.14"
tracing = "0.1.41"
simd-json = "0.15"
# thiserror = "2.0.16"

[dev-dependencies]
serial_test = "3.2"
tracing-subscriber = "0.3.19"
