[package]
name = "ephemera-source"
version = "0.1.0"
edition = "2024"

[dependencies]
ephemera-shared = { workspace = true }
ephemera-xdp = { workspace = true }
eyre = { workspace = true }
rand = { workspace = true }
itertools = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

async-stream = "0.3.6"
bytestring = { version = "1.5.0", features = ["serde"] }
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio-websockets = { version = "0.13", features = [
  "client",
  "native-tls",
  "rand",
  "openssl",
] }
strum = { version = "0.27", features = ["derive"] }
# reqwest = { version = "0.12.22", features = ["json"] }
serde_with = "3.14"
simd-json = "0.17"
enum-table = "2.1.2"
flume = "0.11.1"
dashmap = "6.1.0"
# thiserror = "2.0.16"

[dev-dependencies]
serial_test = "3.2"
tracing-subscriber = { workspace = true }
