[package]
name = "ephemera-xdp"
version = "0.1.0"
edition = "2024"

[dependencies]
xsk-rs = { path = "./vendor/xsk-rs" }
# xsk-rs = "0.8"
smoltcp = { version = "0.12", features = ["log"] }
tokio = { version = "1", features = ["test-util", "io-util", "rt", "macros"] }
itoa = "1.0.15"
portpicker = "0.1.1"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
libbpf-rs = "0.25.0"
netdev = "0.37.1"

[dev-dependencies]
serial_test = "3.2"

[build-dependencies]
libbpf-cargo = "0.25"
