[package]
name = "ephemera-xdp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }

xsk-rs = { path = "./vendor/xsk-rs" }
# xsk-rs = "0.8"
smoltcp = { version = "0.12", features = ["log"] }
itoa = "1.0.15"
portpicker = "0.1.1"
libbpf-rs = "0.25.0"
netdev = "0.39"
bitflags = "2.10.0"
bon = "3.8.1"
thiserror = "2.0.17"

[dev-dependencies]
serial_test = "3.2"

[build-dependencies]
libbpf-cargo = "0.25"
